# test_cmake_dependency

./: CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt
lib/bar/: CMakeLists.txt
lib/bar/cmake/: bar-config.cmake.in
lib/bar/inc/: bar.h
lib/bar/src/: bar.c
lib/foo/: CMakeLists.txt
lib/foo/cmake/: foo-config.cmake.in
lib/foo/inc/: foo.h
lib/foo/src/: foo.c
